# CLI12

./: CHANGELOG.md  CLI12.CPack.Description.txt  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  docs.yml  fuzz.yml  tests.yml
cmake/: CLI12.pc.in  CLI12GeneratePkgConfig.cmake  CLI12Warnings.cmake  CLI12precompiled.pc.in
docs/: Doxyfile  mainpage.md
examples/: CMakeLists.txt  arg_capture.cpp  callback_passthrough.cpp  close_match.cpp  config_app.cpp  custom_parse.cpp  custom_validator.cpp  date_validator.cpp  digit_args.cpp  enum.cpp  enum_ostream.cpp  formatter.cpp  help_usage.cpp  inter_argument_order.cpp  json.cpp  nested.cpp  option_groups.cpp  positional_arity.cpp  positional_validation.cpp  prefix_command.cpp  ranges.cpp  retired.cpp  shapes.cpp  simple.cpp  subcom_help.cpp  subcommands.cpp  testEXE.cpp  validators.cpp
examples/subcom_in_files/: subcommand_main.cpp
fuzz/: CMakeLists.txt  fuzzApp.cpp  fuzzApp.hpp
include/CLI/: App.hpp  Argv.hpp  Config.hpp  ConfigFwd.hpp  Encoding.hpp  Error.hpp  ExtraValidators.hpp  Formatter.hpp  FormatterFwd.hpp  Macros.hpp  Option.hpp  Split.hpp  StringTools.hpp  TypeTools.hpp  Validators.hpp  Version.hpp
include/CLI/impl/: App_inl.hpp  Argv_inl.hpp  Config_inl.hpp  Encoding_inl.hpp  ExtraValidators_inl.hpp  Formatter_inl.hpp  Option_inl.hpp  Split_inl.hpp  StringTools_inl.hpp  Validators_inl.hpp
scripts/: ExtractVersion.py  MakeSingleHeader.py
single-include/: CLI12.hpp.in  CMakeLists.txt
src/: CMakeLists.txt
tests/: AppTest.cpp  CMakeLists.txt  ComplexTypeTest.cpp  ConfigFileTest.cpp  CreationTest.cpp  EncodingTest.cpp  ExtraValidatorsTest.cpp  FormatterTest.cpp  HelpTest.cpp  HelpersTest.cpp  NewParseTest.cpp  NumericTypeTest.cpp  OptionTypeTest.cpp  OptionalTest.cpp  SetTest.cpp  SimpleTest.cpp  TransformTest.cpp  WindowsTest.cpp  app_helper.hpp  catch.hpp  informational.cpp  localeTest.cpp  meson.build
tests/find_package_tests/: CMakeLists.txt
tests/mesonTest/: README.md  main.cpp  meson.build
tests/module_test/: CMakeLists.txt  cmodule.ixx  module_include_test.cpp
tests/package_config_tests/: CMakeLists.txt
